Potential fix for pdf overflow scroll

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2636,6 +2636,11 @@ input, select, textarea {
 			display: block;
 			margin: 4rem 0;
 			width: 100%;
+			overflow: scroll;
+		}
+
+		.iframe {
+			overflow: scroll;
 		}
 
 			.image.main:first-child {
